--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
     "react-tooltip": "^5.28.0",
+    "socket.io-client": "^4.8.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "web3": "^4.15.0"
